--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,6 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  english_words: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,6 +46,7 @@ flutter:
   assets:
     # - images/diamond.png
     - images/
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   fonts:
